# cognitive-construct

./: .gitignore  CNAME  README.md  _config.yml  index.html
.claude-plugin/: marketplace.json
docs/: README.md  cognitive-construct-design.md  creating-skills.md  mcp-skill-conversion.md  skills-reference.md
encyclopedia/: .env.example  README.md
encyclopedia/resources/: source_config.json
encyclopedia/scripts/: encyclopedia.py
encyclopedia/scripts/codegraph/: __init__.py  client.py  database.py  pyproject.toml  result.py  types.py
encyclopedia/scripts/context7client/: __init__.py  client.py  pyproject.toml  types.py
encyclopedia/scripts/exaclient/: __init__.py  client.py  config.py  pyproject.toml  result.py  types.py
encyclopedia/scripts/gitingest/: __init__.py  client.py  pyproject.toml  types.py
encyclopedia/scripts/inmemoria/: __init__.py  client.py  config.py  pyproject.toml  result.py  types.py
encyclopedia/scripts/inmemoria/engines/: __init__.py  pattern.py  semantic.py
encyclopedia/scripts/inmemoria/storage/: __init__.py  database.py
encyclopedia/scripts/inmemoria/utils/: __init__.py
encyclopedia/scripts/inmemoria/watchers/: __init__.py
encyclopedia/scripts/kagiclient/: __init__.py  client.py  pyproject.toml  result.py  types.py
encyclopedia/scripts/perplexity/: __init__.py  client.py  pyproject.toml  types.py
encyclopedia/scripts/searxng/: __init__.py  client.py  pyproject.toml  types.py
inland-empire/: .env.example  .gitignore  README.md
inland-empire/scripts/: inland_empire.py
inland-empire/scripts/mem0/: pyproject.toml
inland-empire/scripts/mem0/openmemory/: README.md  __init__.py  client.py  result.py  types.py
inland-empire/scripts/memory_graph/: __init__.py  client.py  pyproject.toml  result.py  types.py
inland-empire/scripts/memory_libsql/: __init__.py  client.py  pyproject.toml  types.py
rhetoric/: .env.example  .gitignore  README.md
rhetoric/references/: constitution.md  reflection_template.md
rhetoric/scripts/: rhetoric.py
rhetoric/scripts/ai-counsel/: CLAUDE.md  config.yaml  requirements-dev.txt  requirements.txt
rhetoric/scripts/ai-counsel/adapters/: __init__.py  anthropic.py  base_http.py  openai.py
rhetoric/scripts/ai-counsel/ai_counsel/: __init__.py  client.py  result.py  types.py
rhetoric/scripts/ai-counsel/ai_counsel/_internal/: __init__.py  adapters.py  config.py
rhetoric/scripts/ai-counsel/deliberation/: engine.py  summarizer.py
rhetoric/scripts/ai-counsel/models/: config.py  schema.py
rhetoric/scripts/ai-counsel/tests/: conftest.py
rhetoric/scripts/ai-counsel/tests/unit/: test_config.py  test_models.py
rhetoric/scripts/sequentialthinking_py/: __init__.py  client.py  pyproject.toml  result.py  types.py
rhetoric/scripts/vibecheck_py/: __init__.py  client.py  config.py  constitution.py  providers.py  pyproject.toml  state.py  storage.py  types.py
scripts/: pyproject.toml  setup.py
shared/: __init__.py  config_check.py  context.py  credentials.py  embeddings.py  errors.py  events.py  feature_flags.py  feedback.py  mcp_client.py  membrane.py  pyproject.toml  response.py  session.py  synergies.py  validators.py
volition/: .env.example  .gitignore  README.md  SKILL.md
volition/scripts/: skill_index.py  volition.py
volition/scripts/claude-skills-mcp/: README.md
volition/scripts/claude-skills-mcp/tests/integration/: test_full_flow.py
volition/scripts/cross-llm-mcp/: README.md  pyproject.toml
volition/scripts/cross-llm-mcp/src/cross_llm_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  types.py
volition/scripts/mcp/: pyproject.toml
volition/scripts/mcp-server-openai/: README.md  pyproject.toml
volition/scripts/mcp-server-openai/src/mcp_server_openai/: __init__.py  client.py  config.py  result.py  server.py  types.py
volition/scripts/mcp-shodan/: README.md  pyproject.toml
volition/scripts/mcp-shodan/src/mcp_shodan/: __init__.py  __main__.py  cli.py  client.py  config.py  types.py
volition/scripts/mcp/src/semgrep_mcp/: __init__.py  cli.py  client.py  result.py  types.py
volition/scripts/openai-websearch-mcp/: README.md  pyproject.toml
volition/scripts/openai-websearch-mcp/src/openai_websearch_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  types.py
volition/scripts/serena/: pyproject.toml
volition/scripts/serena/scripts/: gen_prompt_factory.py  profile_tool_call.py
volition/scripts/serena/src/serena_client/: __init__.py  client.py  config.py  errors.py  ls_manager.py  result.py  types.py
volition/scripts/serena/src/solidlsp/: ls.py  ls_utils.py  text_utils.py
volition/scripts/serena/src/solidlsp/language_servers/: al_language_server.py  lua_ls.py  powershell_language_server.py  rust_analyzer.py
volition/scripts/serena/test/: conftest.py
volition/scripts/serena/test/solidlsp/clojure/: test_clojure_basic.py
volition/scripts/serena/test/solidlsp/csharp/: test_csharp_basic.py
volition/scripts/serena/test/solidlsp/elixir/: test_elixir_integration.py
volition/scripts/serena/test/solidlsp/python/: test_python_basic.py  test_symbol_retrieval.py
volition/scripts/serena/test/solidlsp/swift/: test_swift_basic.py
volition/scripts/skill-search/: GUIDE_PYTHON_CLIENT_ARCHITECTURE.md  GUIDE_TYPESCRIPT_TO_PYTHON.md  README.md
volition/scripts/skill-search/.github/workflows/: test.yml
volition/scripts/skill-search/docs/: _changelog.md  architecture.md  auto-update.md  getting-started.md  testing.md  usage.md
volition/scripts/skill-search/scripts/: build-all.sh  publish-all.sh  sync-version.py  test-local.sh
volition/scripts/skill-search/tests/integration/: test_backend_http.py  test_full_flow.py  test_timing.py
