[project]
name = "cognitive-construct-setup"
version = "1.0.0"
description = "Setup wizard for Cognitive Construct skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
cc-setup = "setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
