[project]
name = "cognitive-construct-shared"
version = "1.0.0"
description = "Shared utilities for Cognitive Construct skills"
requires-python = ">=3.10"
dependencies = [
    "model2vec>=0.7.0",
    "numpy>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
