[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegraph"
version = "1.0.0"
description = "Python client library for code graph analysis via Neo4j"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "svnbjrn" }
]
keywords = ["code", "graph", "neo4j", "analysis", "ast", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "neo4j>=5.15.0",
]

[project.optional-dependencies]
# Full indexing support requires tree-sitter and codegraphcontext
indexing = [
    "codegraphcontext>=0.3.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-languages>=1.10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
