[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cross-llm-mcp"
version = "0.1.0"
description = "Multi-provider LLM routing wrapper following MCP client architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Volition" }]
keywords = ["llm", "openai", "anthropic", "deepseek", "gemini", "grok", "mistral", "routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
cross-llm-mcp = "cross_llm_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cross_llm_mcp"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
