[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-shodan"
version = "0.1.0"
description = "Shodan API wrapper following MCP client architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Volition" }]
keywords = ["shodan", "security", "api", "client", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
mcp-shodan = "mcp_shodan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_shodan"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
