[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "semgrep-mcp"
version = "1.0.0"
description = "Python client library for Semgrep security scanning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Semgrep, Inc.", email = "hello@semgrep.com" },
]
keywords = [
    "security",
    "static-analysis",
    "code-scanning",
    "semgrep",
    "client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/semgrep/mcp"
Repository = "https://github.com/semgrep/mcp.git"
Issues = "https://github.com/semgrep/mcp/issues"
Documentation = "https://github.com/semgrep/mcp#readme"

[project.scripts]
semgrep-cli = "semgrep_mcp.cli:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.4",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.0",
    "pyright>=1.1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "B",      # flake8-bugbear
    "I",      # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "C90",    # mccabe complexity
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = [
    "semgrep_mcp",
]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.hatch.build.targets.wheel]
packages = [
    "src/semgrep_mcp",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pyright]
pythonVersion = "3.10"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "-v",
    "--tb=short",
]
asyncio_mode = "auto"
