[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-websearch-mcp"
version = "0.5.0"
description = "OpenAI web search client with reasoning model support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Volition" }]
keywords = ["openai", "websearch", "api", "client", "gpt", "reasoning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
openai-websearch = "openai_websearch_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_websearch_mcp"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]